syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message CalculatorSumRequest {
    int32 a = 1;
    int32 b = 2;
}

message CalculatorSumResponse {
    int32 result = 1;
}

message CalculatorPrimeRequest {
    int32 number = 1;
}

message CalculatorPrimeResponse {
    int32 result = 1;
}

message CalculatorAvgRequest {
    int32 number = 1;
}

message CalculatorAvgResponse {
    double result = 1;
}

service CalculatorService {
    rpc sum(CalculatorSumRequest) returns (CalculatorSumResponse);
    rpc prime(CalculatorPrimeRequest) returns (stream CalculatorPrimeResponse);
    rpc avg(stream CalculatorAvgRequest) returns (CalculatorAvgResponse);
}